# sea

./: .gitignore  .loop  .toolchain  .travis.yml  Makefile  README  bochsrc.txt  build_number  configure  update_usb.sh
apps/: actions.rb  install-base-i586-pc-seaos  install-base-x86_64-pc-seaos  manifest.rb  ship.rb  ship.yaml  ship64.yaml  sync.rb  util.rb
apps/cond/: Makefile.in  configure  configure.ac
apps/cond/src/: Makefile.am  Makefile.in  cond.c  cond.h  keyboard.c  output.c
apps/porting/: autoport.sh  build-n.rb  build.rb  build_repo.sh  install_ported.sh  install_repo.sh  package.rb  var.rb
apps/porting/deprecated/: packages.rb
apps/porting/extra/: build-all.sh  build-mruby-1.0.0.sh  inc-buildnr.sh  install-sep.sh  package-list
apps/porting/pack/: aggregate.sh  build-all.sh  build-ordered.sh  clean-all.sh  clean.sh  install.sh  pack.sh
apps/porting/patches/: bash-4.3-seaos-all.patch  binutils-2.25.1-seaos-all.patch  bison-3.0-seaos-all.patch  gawk-4.0.1-seaos-all.patch  gcc-4.7.0-seaos-all.patch  gcc-4.8.0-seaos-all.patch  grep-2.12-seaos-all.patch  grub-0.97-seaos-all.patch  grub-2.00-seaos-all.patch  make-4.0-seaos-all.patch  nano-2.4.2-seaos-all.patch  ncurses-5.9-seaos-all.patch  ncurses-6.0-seaos-all.patch  newlib-2.0.0-seaos-all.patch  readline-6.2-seaos-all.patch
apps/porting/ported/: install_autoconf.sh  install_automake.sh  install_bash.sh  install_binutils.sh  install_coreutils.sh  install_diffutils.sh  install_e2fsprogs.sh  install_findutils.sh  install_fortune.sh  install_gawk.sh  install_gcc.sh  install_grep.sh  install_grub.sh  install_gzip.sh  install_less.sh  install_make.sh  install_nano.sh  install_nasm.sh  install_ncurses.sh  install_newlib.sh  install_patch.sh  install_readline.sh  install_seaos-util.sh  install_sed.sh  install_tar.sh  install_termcap.sh  install_which.sh  packages.rb  patch_autoconf.sh  patch_automake.sh  patch_bash.sh  patch_binutils.sh  patch_coreutils.sh  patch_diffutils.sh  patch_e2fsprogs.sh  patch_findutils.sh  patch_fortune.sh  patch_gawk.sh  patch_gcc.sh  patch_grep.sh  (+15 more)
apps/seaos-util/: Makefile.in  config.h.in  configure  configure.ac  configure.in
apps/seaos-util/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
apps/seaos-util/src/: Makefile.am  Makefile.in  check_password.c  fortune.c  ifc.c  init.c  ioctl.c  login.c  losetup.c  lscpu.c  lspci.c  modprobe.c  mon.c  mount.c  passwd.c  pci_l.h  ping.c  ps.c  route.c  shiv.c  shutdown.c  strace.c  swap.c  syslogd.c  t.c  umount.c  useradd.c
data/: me
data-initrd/: modules-load  preinit.sh
data/boot/grub/: device.map  e2fs_stage1_5  grub.cfg  menu.lst  stage2
data/etc/: bashrc  initrd.conf  mke2fs.conf  profile  termcap
data/etc/rc/: .template  boot  loop  net  rand  shutdown  sync
data/sys/: first_run.sh  greeting
data/users/root/: .vimrc  cond.c  cond.h  keyboard.c  output.c  ping.c  test_loop.sh
toolchain/: Makefile  binutils-2.22-seaos-all.patch  binutils-2.22-seaos.patch  binutils-2.25.1-seaos-all.patch  build-extra.rb  build-new.rb  build.rb  config.sub  gcc-4.7.1-seaos.patch  gcc-4.8.0-seaos-all.patch  install_extras.sh  install_toolchain.sh  make.inc  newlib-1.20.0-seaos.patch  newlib-2.0.0-seaos-all.patch  newlib-2.0.0-seaos.patch  openssl-1.0.1f-seaos-all.patch  seaos64.h  seaos_x86_64.sh  var-new.rb  var.rb  varfix.mk
toolchain/binutils/: make.inc
toolchain/extra/: build.rb
toolchain/gcc/: make.inc
toolchain/gmp/: .gitignore  gmp-5.1.1-seaos-all.patch  make.inc
toolchain/mpc/: make.inc  mpc-1.0.3-seaos-all.patch
toolchain/mpfr/: make.inc
toolchain/ncurses/: make.inc  ncurses-6.0-seaos-all.patch
toolchain/newlib/: make.inc
toolchain/newlib-sys-seaos/: Makefile.am  at.c  ch.c  configure  crt0.c  ctl.c  daemon.c  dir.c  execl.c  execve.c  execvp.c  exit.c  fork.c  ftok.c  id.c  ksyscall.h  link.c  mmap.c  mntent.c  module.c  mount.c  nice.c  openclose.c  pathconf.c  proc.c  rw.c  signal.c  special.c  srv.c  stat.c  sysc.c  termios.c  time.c  truncate.c
toolchain/old/: binutils-2.22-seaos.patch  build-extra.rb  gcc-4.8.0-seaos.patch  seaos_x86_64.sh
toolchain/old/newlib-sys-seaos/: Makefile.am  Makefile.in  at.c  cfspeed.c  ch.c  configure.in  ctype.c  dir.c  execle.c  execlp.c  execve.c  exit.c  getopt.c  group.c  link.c  log.c  module.c  pathconf.c  proc.c  rand.c  rw.c  seaos.c  signal.c  special.c  stat.c  sync.c  sysc.c  time.c
toolchain/old/newlib-sys-seaos/autom4te.cache/: output.1  traces.0  traces.1
toolchain/old/newlib-sys-seaos/include/: mntent.h  netdb.h  paths.h  stdint.h  unistd.h
toolchain/old/newlib-sys-seaos/machine/: Makefile.am  Makefile.in  configure  configure.in  types.h
toolchain/old/newlib-sys-seaos/machine/autom4te.cache/: traces.0  traces.1  traces.3  traces.4
toolchain/old/newlib-sys-seaos/machine/i386/: Makefile.am
toolchain/old/newlib-sys-seaos/machine/i386/autom4te.cache/: output.1  output.3  traces.2
toolchain/old/newlib-sys-seaos/machine/x86_64/: i386mach.h
toolchain/old/newlib-sys-seaos/machine/x86_64/autom4te.cache/: output.5  traces.0
toolchain/old/newlib-sys-seaos/sys/: config.h  dirent.h  fcntl_def.h  mman.h  resource.h  select.h  signal.h  stat.h  termios.h  unistd.h  utsname.h
toolchain/openssl/: make.inc
toolchain/readline/: make.inc  readline-6.2-seaos-all.patch
toolchain/termcap/: make.inc
tools/: build_cd.sh  cfg-new  chd.sh  close_hdimage.sh  copy_to_hd.sh  cpdata.sh  dist.sh  gen_man.sh  inc_build.sh  open_hdimage.sh  remap-pci.sh  update_repos.sh
tools/cd/: preinit.sh
tools/config/: br0  qemu-ifdown  qemu-ifup
(+161 files in other folders)
