
bin_PROGRAMS = fortune ifc ioctl login losetup lscpu lspci modprobe mon mount passwd ping route sps shutdown swap t umount useradd

fortune_SOURCES = fortune.c
ifc_SOURCES = ifc.c
ioctl_SOURCES = ioctl.c
login_SOURCES = login.c check_password.c
login_LDADD = -lcrypto
losetup_SOURCES = losetup.c
lscpu_SOURCES = lscpu.c
lspci_SOURCES = lspci.c
modprobe_SOURCES = modprobe.c
mon_SOURCES = mon.c
mount_SOURCES = mount.c
passwd_SOURCES = passwd.c check_password.c
passwd_LDADD = -lcrypto
ping_SOURCES = ping.c
route_SOURCES = route.c
sps_SOURCES = ps.c
shutdown_SOURCES = shutdown.c
swap_SOURCES = swap.c
t_SOURCES = t.c
umount_SOURCES = umount.c
useradd_SOURCES = useradd.c
