
bin_PROGRAMS = fortune ifc ioctl login losetup lscpu lspci modprobe mon mount passwd ping route sps shiv kshutdown swap t umount useradd strace

fortune_SOURCES = fortune.c
ifc_SOURCES = ifc.c
ioctl_SOURCES = ioctl.c
login_SOURCES = login.c check_password.c
login_LDADD = -lcrypto
losetup_SOURCES = losetup.c
lscpu_SOURCES = lscpu.c
lspci_SOURCES = lspci.c
modprobe_SOURCES = modprobe.c
mon_SOURCES = mon.c
mount_SOURCES = mount.c
passwd_SOURCES = passwd.c check_password.c
passwd_LDADD = -lcrypto
ping_SOURCES = ping.c
route_SOURCES = route.c
sps_SOURCES = ps.c
kshutdown_SOURCES = shutdown.c
swap_SOURCES = swap.c
t_SOURCES = t.c
umount_SOURCES = umount.c
useradd_SOURCES = useradd.c
shiv_SOURCES = shiv.c
strace_SOURCES = strace.c

