AC_PREREQ(2.59)
AC_INIT([newlib], [NEWLIB_VERSION])
AC_CONFIG_SRCDIR([crt0.c])
AC_CONFIG_AUX_DIR(../../../..)
NEWLIB_CONFIGURE(../../..)

AC_CONFIG_SUBDIRS(machine)

SEAOS_MACH_LIB=
if test -n "${machine_dir}"; then
  if test "${use_libtool}" = "yes"; then
    SEAOS_MACH_LIB=machine/${machine_dir}/libseaos${machine_dir}.${aext}
  else
    SEAOS_MACH_LIB=machine/lib.${aext}
  fi
fi
AC_SUBST(SEAOS_MACH_LIB)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
